Implement thread-safe configurations and caching, enhance task validation, and refactor services for scalability:
- Introduced `AppProperties` for centralized configuration management.
- Added `CacheConfig` for in-memory caching of project statistics.
- Integrated request/response logging with conditional runtime toggling (`LoggingConfig`).
- Improved `CpmService` with duplicate task code validation.
- Enhanced task validation with `javax.validation` annotations in domain models.
- Refactored services (`TaskDataService`, `ProjectPlannerService`) for thread-safe operations with fine-grained locking.
- Added integration tests for new features and validation rules.